# mono2ledger

./: .gitignore  README.md  config.toml  flake.nix  mono2ledger  mono2ledger.bak  mono2ledger.py  pyproject.toml  requirements.txt  shell.nix
doc/: config.example.yaml
mono2ledger/: __init__.py  __main__.py  cli.py  config.py  main.py
src/: mono2ledger
tests/: conftest.py  test_main.py
