[build-system]
requires = ['setuptools']
build-backend = "setuptools.build_meta"

[project]
name = "mono2ledger"
authors = [
  {name = "Ivan Popovych"}
]
description = "Utility to convert monobank card statement to ledger entries"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "COPYING"}
dependencies = ["pycountry"]
version = "2.1"

[project.optional-dependencies]
dev = ["mono2ledger[test]", "mono2ledger[format]"]
test = ["pytest", "pytest-factoryboy", "faker"]
format = ["black", "isort"]

[project.scripts]
mono2ledger = "mono2ledger:main"
